# m3_lucas_linus_maskininl-rningsramverk

./: .dockerignore  DOCKERFILE  README.md  project_plan.md  pyproject.toml
app/: main.py  model_loader.py  schemas.py
model/: model.pt  model_scripted.pt
