[project]
name = "m3-lucas-linus-maskininl-rningsramverk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sqlmodel>=0.0.37",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]
